Fixed contact page visual error, and project visual error on mobile.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,7 +27,7 @@ html {
   --small-project-height: 300px;
   --small-project-width: calc(365px - 1rem);
 
-  
+  overflow-x: hidden;
 }
 
 /* ===================== GENERAL ===================== */
@@ -221,6 +221,8 @@ textarea {
     width: 48px;
 
   }
+
+
 }
 
 @media only screen and (max-width: 750px) {
@@ -245,6 +247,7 @@ textarea {
   .about-container {
     min-height: 450px;
   }
+
 }
 
 /* ===================  PROJECTS  =================== */ 
@@ -265,19 +268,7 @@ textarea {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  /* align-items: center; */
   gap: 1rem;
-
-  /* display: grid;
-
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 450px;
-
-  justify-items: center;
-
-  gap: 1rem; */
-  /* flex-direction: row; */
-  /* justify-content: space-evenly; */
 }
 
 .Project {
@@ -304,6 +295,18 @@ textarea {
   outline: none;
   transition: border .5s;
   border: solid 2px var(--second-color);
+}
+
+@media only screen and (min-width: 751px) {
+  .Project.expand {
+    height: calc(var(--project-height) * 1.5);
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .Project.expand {
+    height: calc(var(--project-height) * 1.8);
+  }
 }
 
 .project-image {
@@ -527,6 +530,7 @@ textarea {
 .contact-input {
   height: 2rem;
   width: var(--small-project-width);
+  max-width: 40vw;
   outline: none;
   border: var(--main-color) 2px solid;
   transition: border .5s;
@@ -561,6 +565,7 @@ textarea {
   flex-direction: column;
   gap: 1em;
   min-width: var(--project-width);
+  max-width: 80vw;
 }
 
 .contact-textarea {
@@ -573,6 +578,12 @@ textarea {
   transition: border .5s;
 
   border: var(--main-color) 2px solid;
+}
+
+@media only screen and (max-width: 1100px) {
+  .contact-textarea {
+    max-width: 80vw;
+  }
 }
 
 
