--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,10 +10,6 @@ body {
 
 }
 
-html {
-  overflow-x: hidden;
-}
-
 .alt-font {
   font-family: 'Open Sans', sans-serif;
 
